# Obsidian-Run-CUDA

./: LICENSE  Obsidian-Run-CUDA.cabal  README.md
Obsidian/Run/CUDA/: Exec.hs
