Name:           Obsidian-Run-CUDA
Version:        0.4.0.0


License:                BSD3
License-file:           LICENSE
Stability:              Beta
Maintainer:		Joel Svensson<svenssonjoel@yahoo.se>
Author:			Joel Svensson<svenssonjoel@yahoo.se>

Copyright:              Copyright (c) 2011-2017 Joel Svensson 		  			
  
Synopsis:               Run Obsidian programs on a GPU from haskell code 
HomePage:               https://github.com/svenssonjoel/Obsidian
Description: 
   Obsidian is an embedded language for general purpose programming targeting 
   GPU's. This package allows you to run Obsidian programs from haskell code.

Category: Language
Cabal-Version: >=1.8
Tested-With: GHC == 8.0.2

build-type: Simple

source-repository head
  type:     git
  location: git://github.com/svenssonjoel/Obsidian.git

----------------------------------------------------------------------------------------------------
Library
  -- Stable packages, no upper bounds
  build-depends: base >= 4 && < 5
               , vector           >= 0.10.9.1 
               , mtl              >= 2.0 
               , containers       >= 0.4.2.1
               , text             >= 0.11.3.1
               , process          >= 1.1.0.2
               , rdtsc            == 1.3.0.0  
  -- Less-stable packages, upper bounds on next major version:
  build-depends: mwc-random       >= 0.13.1.1 && < 0.14
               , cuda             >= 0.5.1.1  && < 0.8
               , Obsidian         >= 0.4.0.0  && < 0.5.0.0
             
  exposed-modules: Obsidian.Run.CUDA.Exec                    
            
  other-modules: 
        
  GHC-Options: 
-- -O2 

--  include-dirs:


--  extra-lib-dirs: 

--  Includes: 
--  Extra-libraries: 
  

